<resources>
    <string name="app_name">SolarSoluce</string>
    <string name="accueil">Accueil</string>
    <string name="menuinfo">Info</string>
    <string name="quitter">Quitter</string>
    <string name="aide">Aide</string>
    <string name="solar_soluce">SOLAR SOLUCE</string>
    <string name="type_1">Photovoltaïque</string>
    <string name="type_2">Thermique</string>
    <string name="imageliste">Panneau</string>
    <string name="panneau">NomPanneauSolaire</string>
    <string name="information_solar">Information Solar</string>
    <string name="infosujet">Notre équipe s\'est interessé à la manière de rendre le monde plus écologique. Nous avons donc rechercher la meilleure façon de produire de l\'electricité depuis n\'importe quel endroit dans le monde.</string>
    <string name="lignetitre">lignetitre</string>
    <string name="notre_quipe">Notre équipe :</string>
    <string name="t_o_asseline">Téo Asseline</string>
    <string name="arthur_weidner">Arthur Weidner</string>
    <string name="iut_informatique_14_04_2023">IUT Informatique - 14/04/2023</string>
    <string name="recyclepanneau">recyclepanneau</string>
    <string name="cetaitaliut">cetaitaliut</string>
    <string name="cetteimgetaitenoctobre">cetteimgetaitenoctobre</string>
    <string name="aide_l_application_permet_de_calculer_le_meilleur_emplacement_pour_vos_panneaux_solaires_il_vous_suffit_de_choisir_un_panneau_d_entrer_les_coordonn_es_et_de_recevoir_les_statistiques">Aide : l\'application permet de calculer le meilleur emplacement pour vos panneaux solaires. il vous suffit de choisir un panneau, d\'entrer les coordonnées et de recevoir les statistiques.</string>
    <string name="recherche">RECHERCHE</string>
    <string name="jesuislenom">JeSuisLeNom</string>
    <string name="nom">Nom</string>
    <string name="coordonnee_x" translatable="false">Latitude</string>
    <string name="coordonn_e_y" translatable="false">Longitude</string>
    <string name="envoie_donnees">Envoie donnees</string>
    <string name="description">Description</string>
    <string name="jesuisletype">JeSuisLeType</string>
    <string name="jesuisladescription">JeSuisLaDescription</string>
    <string name="type">Type</string>
    <string name="retour">RETOUR</string>
    <string name="photo_representant_un_panneau">Photo representant un panneau</string>
    <string name="aideText">Si vous avez besoin d\'aide veuilez contacter :</string>
    <string name="aideText2">Ou vous pouvez trouver des informations utiles sur notre site web :</string>
    <string name="aideEmail" translatable="false">E-mail : Aide@SolarSoluce.fr</string>
    <string name="aidewebsite" translatable="false">www.solarsoluce.com</string>
    <string name="aidePhone">Téléphone : 01 23 45 67 89</string>
    <string name="rechercheCoord">Cliquez pour entrer vos coordonnées</string>
    <string name="coordTitre">Veuillez saisir les coordonnées du lieu ou vous souhaitez installer un panneau solaire</string>
    <string name="coordValide">Valider</string>
    <string name="statistique">STATISTIQUE</string>
    <string name="jesuislaproduction">Jesuislaproduction</string>
    <string name="jesuislaproductionmax">JesuislaproductionMax</string>
    <string name="jesuislaproductionmoy">JesuislaproductionMoy</string>
    <string name="production_moyenne_du_panneau">Production moyenne du panneau</string>
    <string name="production_vos_coordonn_es">Production à vos coordonnées</string>
    <string name="les_informations_de_production_pour_ce_panneau_sont">Les informations de production pour ce panneau sont :</string>
    <string name="production_maximale_du_panneau">Production maximale du panneau</string>
    <string name="contact" translatable="false">contact</string>
    <string name="textview">Pas encore de coordonnées saisies</string>
    <string name="voici_vos_coordonn_es">Voici vos coordonnées :</string>
    <string name="rendement" translatable="false">Rendement</string>
    <string name="jesuilerendement">JeSuiLeRendement</string>
    <string name="ButtonStat">Voir les statistique</string>
</resources>