<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lignetitre4"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="#3F51B5"
        android:contentDescription="@string/lignetitre"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ligne_foreground"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/lignetitre3"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="#3F51B5"
        android:contentDescription="@string/lignetitre"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@mipmap/ligne_foreground"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/aideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="59dp"
        android:text="@string/aideText"
        app:layout_constraintBottom_toTopOf="@+id/aideEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lignetitre3"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/aideEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="18dp"
        android:text="@string/aideEmail"
        app:layout_constraintBottom_toTopOf="@+id/aidePhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aideText" />

    <TextView
        android:id="@+id/aidePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="359dp"
        android:text="@string/aidePhone"
        app:layout_constraintBottom_toTopOf="@+id/lignetitre4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aideEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>